19May20=======================================================================
1. Convert all remaining commands and areas within the program that used the
   DB_File/Storable interface to DXUsers.pm to use the (hopefully) more stable
   JSON text file + caching interface. Here's hoping. 
2. Add branch name to startup and sh/version.
16May20=======================================================================
1. Crontab can now spawn_cmd('export_users') - very safely.
15May20=======================================================================
1, Changed the underlying storage engine from Storable to JSON. Seems to run
   much faster! Exporting the user file with 181000 records takes ~5.1secs
   with Storable and ~1.5secs. No more thaw() version mismatches! 
2. Completed conversion on initialisation + export
10May20=======================================================================
1. Added basic changes so that users *could* have multiple connections to the
   same node if it is allowed. This is work in progress and is there to see 
   if it deals with some networking problems encountered on very high volume
   sites which can see more than 1000 users (although the problems can occur
   with many hundreds or by the practices of certain ISPs). More information
   will be forthcoming if I get to the bottom of what's REALLY going on and
   whether this is (or maybe just one part of) the solution. It won't be 
   ready for general use until then.
2. Fixed the script import error reported by Joaquin (EA3CV?), by the simple
   expedient of restoring the version from the master branch. 
09May20=======================================================================
1. Show the route by which this PCxx came in progress debugging reports. In
   some other words: the spot/wwv/wcy/ann message arrived first from this 
   connection. 
2. Improve progress WWV & WCY messages.
3. Stop random node isolations (at least in one place)