@@ -1,3 +1,7 @@
+20May20=======================================================================
+1. Strip out conversion from users.v2 and v3 to new json format file into a
+   new program called convert-v3-to-v4.pl. In theory, this program *could* be
+   run at any time and is backported to mojo and master branches.
 19May20=======================================================================
 1. Convert all remaining commands and areas within the program that used the
    DB_File/Storable interface to DXUsers.pm to use the (hopefully) more stable
